# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.485 2011/10/23 11:10:35 blueness Exp $

  23 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-3.0.4-r4.ebuild:
  Stable amd64, x86. Bug #387877

  19 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r67.ebuild, -hardened-sources-3.0.4-r1.ebuild:
  Removed buggy versions, bug #371021

  19 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-3.0.4-r2.ebuild:
  Stable on amd64 and x86

  19 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r68.ebuild:
  Stable on amd64 and x86

  09 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  -hardened-sources-2.6.32-r65.ebuild, -hardened-sources-2.6.32-r66.ebuild,
  -hardened-sources-3.0.3-r1.ebuild, -hardened-sources-3.0.4.ebuild:
  Remove deprecated versions

*hardened-sources-3.0.4-r5 (08 Oct 2011)

  08 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.0.4-r5.ebuild:
  Based on 3.0.4 + genpatches-3.0-7 + grsecurity-2.2.2-3.0.4-201110080819

*hardened-sources-2.6.32-r70 (08 Oct 2011)

  08 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-2.6.32-r70.ebuild:
  Based on 2.6.32.46 + genpatches-2.6.32-43 +
  grsecurity-2.2.2-2.6.32.46-201110080819

  08 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-3.0.4-r1.ebuild:
  Stable on amd64 and x86

  08 Oct 2011; Anthony G. Basile <blueness@gentoo.org>
  hardened-sources-2.6.32-r67.ebuild:
  Stable on amd64 and x86

*hardened-sources-3.0.4-r4 (27 Sep 2011)

  27 Sep 2011; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.0.4-r4.ebuild:
  Based on 3.0.4 + genpatches-3.0-5 + grsecurity-2.2.2-3.0.4-201109261052

*hardened-sources-2.6.32-r69 (27 Sep 2011)
