@@ -68,8 +68,6 @@ DIST hardened-patches-2.6.37-8.extras.tar.bz2 367417 RMD160 d2a3fa214047d8fd2325
 DIST hardened-patches-2.6.38-7.extras.tar.bz2 442689 RMD160 bd661205cd9f5976a702d55ff0aa0399c1cd8fcc SHA1 f1844f17fcb61a4fd569b45cddaf8a9869f932ee SHA256 a42f0c5d38621f92302a5250e59881b86858173f775a1d0a2db35bcd07066d4b
 DIST hardened-patches-2.6.39-7.extras.tar.bz2 554731 RMD160 6d0214550484fcfcebf89604b5c917c00c7ad067 SHA1 094528015db3c3f15dab4a713b582671c1b34c4a SHA256 534c202b8dd8e564b7bb2d9ec93829ee16d524c2558387086f586527e2b51197
 DIST hardened-patches-2.6.39-9.extras.tar.bz2 520242 RMD160 36f4ff9410447c73799d3265aba88693d418b2f5 SHA1 f4e609542977e83b6fa0af06c0b812745bc476fc SHA256 352e0bb2d4f4a20e86d8e6d518dbae0f0d8ee072176a9b8181f8f09fcfaac77e
-DIST hardened-patches-3.0.4-3.extras.tar.bz2 455412 RMD160 557931fc23eff054087639995bf7e5c238a802a4 SHA1 ed5746d1583292dd5e264382c175e059888f70ed SHA256 f423732651ccc316017313de45534450af6e0ad43a626c5f3ce4f918388cb246
-DIST hardened-patches-3.0.4-4.extras.tar.bz2 459130 RMD160 7177739b41d27b6c7fd3479b2aee72b66480cd54 SHA1 2bb649c6189d3d72730d8c12e78ce92c9995973f SHA256 70748ee8952b952129e4c395b579f96413174b3366c8db1de23303ea19814a64
 DIST hardened-patches-3.0.4-5.extras.tar.bz2 458822 RMD160 e2a609e70a0897a1378da230ee3eda7caae10ab9 SHA1 0e542aeb1d83fc525aeab1588c004d88f0312fbc SHA256 981d2ba33c8282146df3920f8ee133515c3badeec43072c3e8f6f7765eff0de3
 DIST hardened-patches-3.0.4-6.extras.tar.bz2 475630 RMD160 d1810c18572ab742e93cbcb8c53c0eac5ab40ee7 SHA1 e5e10063325c2dd425b463f628baabc457d99e28 SHA256 8d37f296d0f578a5148caa9f967a3628021196533792f5184157d4420971ec91
 DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c618039c SHA1 410b4fc818023bfef60064e973ff0ab46d3bfb19 SHA256 5099786d80b8407d98a619df00209c2353517f22d804fdd9533b362adcb4504e
@@ -99,16 +97,14 @@ EBUILD hardened-sources-2.6.37-r7.ebuild 1743 RMD160 f7b90bc6c4dc00022faa518d8ed
 EBUILD hardened-sources-2.6.38-r6.ebuild 1753 RMD160 64f428d25d416328ff929711337f365279eaaaca SHA1 f4b6c39b54628dd86f046b21043d748bac0caf0e SHA256 aede06fc72c70e1f0aedeef92ca83b11e69dae10e282f5fd5f8ad36fd0bc5ecb
 EBUILD hardened-sources-2.6.39-r6.ebuild 1755 RMD160 b4c90571b6b8b2414af5b029c059687adae5fabf SHA1 7d299be5bcd3a0090372f56c53a699d4053fbced SHA256 00b5b598283b461f8c3d8f0547332c8f95bdbf56c4687e39bf31aeb4b57b8052
 EBUILD hardened-sources-2.6.39-r8.ebuild 1753 RMD160 b1edeaa488dd2045f76434505fe61c9bf1477f80 SHA1 d41d58f8e80feb420bc03cd440e907154b1a11d1 SHA256 5213ab9ed449d941cbf53ff81d9e4d0bdc7a384db9390fa348db72062ccb7b86
-EBUILD hardened-sources-3.0.4-r2.ebuild 1752 RMD160 8d27e78bec5b5b7d0ce8165179dfb0d25b1cff44 SHA1 4a2fad2c9d9e611469d75876e3b2f97616a19e1a SHA256 bc56e86b92850c00f54e36fb3eec3dccb1663fb6004f4ad196939a7ee86fe048
-EBUILD hardened-sources-3.0.4-r3.ebuild 1754 RMD160 a50e9532781690eb294b1888bd534472452131da SHA1 9a14545a70a7a5e7aba8457641b00485e58afda5 SHA256 fa3c8c69629906fb3e38d8daeaf3e738fc00add056e3529d02fc9f7d382a79f5
 EBUILD hardened-sources-3.0.4-r4.ebuild 1752 RMD160 2b87a6fc1b1d49795efc65d2e705df9fbf1f5fb1 SHA1 edce06fc82b3927e78baf4dc0cfa14d9984d9878 SHA256 6bc4f7c0d728ddbf9cec541a443a6c2baa5b8d74802bd1ab82eca5eb49131c26
 EBUILD hardened-sources-3.0.4-r5.ebuild 1754 RMD160 47153609feef3dace87ff0f36e7802ade544e0e5 SHA1 4878b6e82506fbad8ef69fd636d9dd2657375cc1 SHA256 d57210700d5a250bd3adb73a98d10b72b868eb0b84dd7d61d2eed405c7d4c662
-MISC ChangeLog 105307 RMD160 d4a1dff012520188f0ffd15b85c0e88cfe53e0e1 SHA1 6f5fabacb2cb336402be208daa5268f319e55fac SHA256 473a8ad47b43ef70994bfa16864d9a7ca8ba44ca66c3a9871d0d51bab75ad357
+MISC ChangeLog 105458 RMD160 8af197d689e480c7021c7a75eabe5ba23d827ee0 SHA1 a314584d79a8718895cbac792b1021c829aa4c61 SHA256 172a3d10da462715fc2a12daa2d20327fec8cae5e2b12ad10ac9b0a99e495f04
 MISC metadata.xml 578 RMD160 7ea189a37d0f863ae9c52170bb85df27d21686fb SHA1 4765c25d7770a69f7b9dda2b1accc8ff27b74ad0 SHA256 64140e091b51002a5355d8fcfd351f2f39ed63da68af3a5751fc2058d0d03813
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk6j9jcACgkQl5yvQNBFVTVVyACfQOS4UU8dUbJ7oedm2z7N1j7v
-ZNcAn0pvxtkGQ2Q3IuNVmZwuPWj4YVth
-=WIdq
+iEYEAREIAAYFAk6j9tUACgkQl5yvQNBFVTWc0gCdHCywv32hi1F4WywOLmVr2qM2
+vaAAoKKo2a/HNITI4b11hUiySWyAMh1s
+=Nz7z
 -----END PGP SIGNATURE-----
